--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ yarn-error.log
 /.vscode
 public/.DS_Store
 public/images/.DS_Store
+public/.DS_Store
+public/images/.DS_Store
+public/images/.DS_Store
